src/global.css
/* ... */
.module-slider {
  padding-top: 8dvw;
  padding-bottom: 8dvw;
}

.portfolio-container {
  column-gap: 1vw;
  row-gap: 1vw;
  align-items: flex-start;
  display: flex;
}

.inner-video {
  width: 100%;
  height: 100%;
  position: relative;
  aspect-ratio: 16 / 9;
}

.inner-video.expertise {
  aspect-ratio: 1;
  border-radius: .5rem;
  overflow: hidden;
}

.work-tags-container {
  z-index: 5;
  justify-content: space-between;
  align-self: flex-start;
  align-items: flex-start;
  width: 100%;
  padding-top: 1vw;
  padding-left: 1vw;
  padding-right: 1vw;
  display: flex;
  position: absolute;
}



.module-blocks {
  column-gap: 1vw;
  row-gap: 1vw;
  flex-flow: column;
  padding-top: 4vw;
  padding-left: 1vw;
  padding-right: 1vw;
  display: flex;
}

.work-plus {
  display: block;
}

.marquee-block-scroll {
  column-gap: 1dvw;
  row-gap: 1dvw;
  flex-flow: column;
  width: 100%;
  padding-top: 8dvw;
  padding-bottom: 8dvw;
  display: flex;
  overflow: hidden;
}

.awards .splide__list {
  display: flex;
  flex-flow: column;
  justify-content: flex-start;
  align-items: flex-start;
  width: 100%;
  margin-top: 0;
  margin-bottom: 0;
}

.items-awards {
  color: #1d1d1d;
  border-top: 1px solid #1d1d1d33;
  width: 100%;
  padding-top: 1.5dvw;
  padding-bottom: 2.5dvw;
  display: flex
}

.order-awards {
  width: 10%;
}

.client-awards {
  align-self: flex-start;
  width: 41%;
  font-size: 1.5dvw;
}

.award-year {
  text-align: right;
  width: 6%;
}



@media screen and (max-width: 991px) {
  .navbar {
    padding-left: 2dvw;
    padding-right: 2dvw;
  }

  .nav-inner {
    column-gap: 1.6dvw;
  }

  .nav-link {
    font-size: 1.6vw;
  }

  .hero {
    font-size: 7vw;
    display: block;
    margin-bottom: 4vw;
  }

  .word {
    display: inline-block;
  }

  .studio-h4 {
    width: auto;
    margin-top: .4vw;
    font-size: 2.2vw;
  }

  .hero-link {
    border-radius: 3vw;
    width: 50%;
    margin-left: 0;
    padding-top: 1.6vw;
    padding-bottom: 1.6vw;
    font-size: 2vw;
    display: block;
  }

  .hero-slider-container {
    padding-left: 0;
  }

  .hero-slider {
    cursor: auto;
    padding-left: 2dvw;
    padding-right: 10dvw;
  }

  
  .module-slider {
    padding-top: 14dvw;
    padding-bottom: 14dvw;
  }

  .work-title {
    font-size: 9vw;
  }

  .work-title.mr-drag {
    margin-right: 6vw;
  }

  .splide__pagination {
    gap: 2vw;
    margin-top: 3vw !important;
  }

  .splide__pagination li {
    width: 6px;
    height: 6px;
    border-radius: 50%;
    position: relative;
    overflow: hidden;
  }

  .splide__pagination li .splide__pagination__page.is-active {
    background: #1D1D1D;
  }

  .splide__pagination li .splide__pagination__page {
    width: 100%;
    height: 100%;
    padding: 0;
    background: #D9D9D9;
    position: absolute;
    top: 0;
    left: 0;
    margin: 0 !important;
  }

  .slide__list {
    padding-right: 15%;
  }

  .logo-marquee {
    max-width: 50dvw;
  }

  .label-info-awards {
    font-size: 1.2dvw;
    line-height: 1.4;
  }

  .text.description-info-awards {
    font-size: 1.3dvw;
    line-height: 1.5dvw;
    width: 70%;
  }

  .brands-block-container {
    height: 31.875rem
  }

  .w-node_01 {
    grid-row: span 1 / span 4 / span 1 / span 4;
  }

  .w-node_02 {
    grid-row-end: 2;
    grid-column: 5 / 9;
  }

  .w-node_03 {
    grid-column: 9 / 13;
  }

  .w-node_04 {
    grid-area: 2 / 5 / 3 / 9;
  }

  .w-node_05 {
    grid-area: 2 / 9 / 3 / 13;
  }

  .footer-links {
    font-size: 2.4vw;
  }

  .footer-links-container {
    column-gap: 1.2vw;
    row-gap: 1.2vw;
  }

  .landscape {
    background-color: rgba(0, 0, 0, 0);
    justify-content: flex-start;
    align-items: center;
  }

  .portfolio-container {
    column-gap: 2vw;
    row-gap: 2vw;
    justify-content: center;
    align-items: center;
  }

  .home-video-container {
    display: flex;
    flex-direction: column-reverse;
  }

  .inner-video {
    aspect-ratio: 3 / 2;
    overflow: hidden;
  }

  .work-tags-container {
    padding-left: 0px;
    padding-right: 0px;
    position: static;
  }

  .project-name-container {
    column-gap: 1.2dvw;
    row-gap: 1.2dvw;
    width: auto;
  }

  .project-block-title {
    color: #000;
  }

  .work-plus {
    display: none;
  }

  .work-tags-title {
    white-space: wrap;
  }

  .work-description {
    color: #a0a0a0;
    text-transform: uppercase;
    font-size: 1.2dvw;
  }

  .marquee-block {
    padding: 16dvw 2dvw;
  }

  .marquee-block-scroll {
    column-gap: 2dvw;
    row-gap: 2dvw;
    padding: 30dvw 4dvw;
  }

  .studio-h4.expertise-title {
    width: 70%;
    font-size: 3dvw;
  }

  .expertise-image-container {
    column-gap: 3dvw;
    row-gap: 3dvw;
    padding: 2dvw 2dvw 3dvw;
  }
  
  .expertise-image-container:hover {
    padding: 2dvw;
  }

  .expertise-container.blue {
    background-color: #d5f2f6;
  }

  .expertise-container.magenta {
    background-color: #fbefff;
  }

  .expertise-container.green {
    background-color: #e5f4e1;
  }

  .order-awards {
    width: 8%;
    font-size: 1.2dvw;
    line-height: 1.4;
  }

  .client-awards {
    font-size: 2dvw;
  }

  .single-brand-container.coca-cola {
    background-color: #e61d2b;
  }

  .single-brand-container.google {
    background-color: #5286ed;
  }

  .single-brand-container.ogilvy {
    background-color: #ec3f43;
  }

  .single-brand-container.spotify {
    /* background-color: #1ed760; */
    background-color: #1db954;
  }

  .single-brand-container.oreo {
    background-color: #2259c2;
  }

  .single-brand-container.saatchi-saatchi {
    background-color: #000;
  }

  .single-brand-container.powerade {
    /* background-color: #00acec; */
     background-color: #007bff;
  }

  .single-brand-container.doordash {
    background-color: #ff3008;
  }

  .award-year {
    align-items: flex-end;
    justify-content: flex-start;
    width: 6%;
  }

  .infos-awards {
    width: 22%;
  }
}
/* ... */

